--- a/Vue-CLI/vue-element/src/common/stylus/mixin.styl
+++ b/Vue-CLI/vue-element/src/common/stylus/mixin.styl
@@ -8,10 +8,8 @@ border-1px($color)
     width 100%
     border-top 1px solid $color
     content ''
-  &:before
-    display block
-    position absolute
-    left 0
-    bottom top 
-    width 100%
-    border-buttom 1px solid $color
+
+bg-image($url)
+  background-image: url($url + "@2x.png")
+  @media (-webkit-min-device-pixel-ratios: 3),(min-device-pixel-ratios: 3)
+    background-image: url($url + "@3x.png")
